src/test/ui/argument-suggestions/invalid_arguments.stderr
error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:13:3
   |
LL |   one_arg(1.0);
   |   ^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:5:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------
help: make these changes
   |
LL |   one_arg({i32});
   |   ^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:16:3
   |
LL |   two_arg_same(1, "");
   |   ^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:6:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_same(1, {i32});
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:17:3
   |
LL |   two_arg_same("", 1);
   |   ^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:6:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_same({i32}, 1);
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:18:3
   |
LL |   two_arg_same("", "");
   |   ^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:6:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_same({i32}, {i32});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:19:3
   |
LL |   two_arg_diff(1, "");
   |   ^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:7:4
   |
LL | fn two_arg_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_diff(1, {f32});
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:20:3
   |
LL |   two_arg_diff("", 1.0);
   |   ^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:7:4
   |
LL | fn two_arg_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_diff({i32}, 1.0);
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:21:3
   |
LL |   two_arg_diff("", "");
   |   ^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:7:4
   |
LL | fn two_arg_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_arg_diff({i32}, {f32});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:24:3
   |
LL |   three_arg_diff(X{}, 1.0, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_diff({i32}, 1.0, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:25:3
   |
LL |   three_arg_diff(1, X {}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_diff(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:26:3
   |
LL |   three_arg_diff(1, 1.0, X {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_diff(1, 1.0, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:28:3
   |
LL |   three_arg_diff(X {}, X {}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_diff({i32}, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:29:3
   |
LL |   three_arg_diff(X {}, 1.0, X {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_diff({i32}, 1.0, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:30:3
   |
LL |   three_arg_diff(1, X {}, X {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_diff(1, {f32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:32:3
   |
LL |   three_arg_diff(X {}, X {}, X {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_diff({i32}, {f32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:34:3
   |
LL |   three_arg_repeat(X {}, 1, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_repeat({i32}, 1, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:35:3
   |
LL |   three_arg_repeat(1, X {}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_repeat(1, {i32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:36:3
   |
LL |   three_arg_repeat(1, 1, X {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_repeat(1, 1, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:38:3
   |
LL |   three_arg_repeat(X {}, X {}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_repeat({i32}, {i32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:39:3
   |
LL |   three_arg_repeat(X {}, 1, X {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_repeat({i32}, 1, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:40:3
   |
LL |   three_arg_repeat(1, X {}, X{});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_repeat(1, {i32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:42:3
   |
LL |   three_arg_repeat(X {}, X {}, X {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_arg_repeat({i32}, {i32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 21 previous errors

For more information about this error, try `rustc --explain E0059`.
